static/style.css
body{
    background: #f4f6f8;
}
#header{
    max-width: 600px;
    margin: 20px auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
#header .logo > a{
    font-weight: 700;
    font-size: 30px;
    color: #333;
}
#header a{
    margin-left:10px;
  
}
#header .util{
    display: flex;
    align-items: center;
   
}
#header .util .user{
    font-size: 13px;
    color: #666;
    margin-left: 5px;
}
.container{
    max-width: 600px;
    margin: 30px auto;
    padding: 0 15px;
}
.container h2{
    margin-bottom: 30px;
}

.card{
    background: white;
    border-radius: 12px;
    padding: 16px;
    margin-bottom: 15px;
    box-shadow: 0 2px 8px rgba(0,0,0,0.05);
    transition:all 0.2s ease;
    cursor: pointer;
}
.card:hover{
    transform: translateY(-2px);
    box-shadow: 0 8px 20px rgba(0,0,0,0.12);
}
.card:active{
    transform: scale(0.98);
}

.title{
    font-size: 18px;
    font-weight: 700;
    
}
.badge{
    display: inline-block;
    padding: 4px 8px;
    border-radius: 6px;
    font-size: 12px;
    background: #ffe5e5;
    color: #d60000;
    margin-bottom: 8px;
    margin-top: 10px;
}

.btn{
    display: inline-block;
    padding: 6px 10px;
    border-radius: 6px;
    background: #333;
    color: #fff;
    font-size: 12px;
    margin-right: 5px;
}
.btn.primary{
    background: #4caf50;
    color: #fff;
}
.btn.primary:hover{
    background: #43a047;
}
.btn.logout{
    background: #ff5252;
    color: #fff;
}
.btn.logout:hover{
    background: #e03131;
}
.btn:hover{
    background: #555;
}
.write-btn{
    display: inline-block;
    width: fit-content;
    margin: 10px auto;
    padding: 10px 15px;
    background: #4caf50;
    color: #fff;
    border-radius: 8px;
    font-weight: 600;
}
.actions{
    display: flex;
    justify-content: flex-end;
    gap: 8px;
    margin-top: 10px;
}
.btn.edit{
    background: #f1f3f5;
    color: #333;
}
.btn.edit:hover{
    background: #dee2e6;
}
.btn.delete{
    background: #ff5252;
    color: #fff;
}
.btn.delete:hover{
    background: #e03131;
}
.option-box{
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 12px;
  background: #f8f9fa;
  border-radius: 8px;
  margin: 10px 0;
}
.vote_btn{
   background: #f1f3f5;
   padding: 8px 12px;
   border-radius: 8px;
   text-decoration: none;
   font-weight: 600;
   transition: all 0.2s;
}
.vote_btn:hover{
    background: #4caf50;
    color: #fff;
    transform: scale(1.05);
}
hr{
    margin: 15px 0;
    border: 0;
    border-top: 1px solid #eee;
}
.total{
    font-weight: 700;
    margin-top: 10px;
    font-size: 14px;
}

/* modal style */
.modal{
    position: fixed;
    inset: 0;
    background: rgba(0,0,0,0.5);
    display: flex;
    justify-content: center;
    align-items: center;
}
.modal-box{
    background: #fff;
    padding: 20px;
    border-radius: 12px;
    width: 300px;
    text-align: center;
}
.modal-actions{
    margin-top: 15px;
    display: flex;
    justify-content: center;
    glyph-orientation-horizontal: 10px;
}
.hidden{
    display: none;
}

.flash-box{
    position: fixed;
    top: 20px;
    left: 50%;
    transform: translateX(-50%);
    
    background: #333;
    color: white;
    padding: 12px 20px;
    border-radius: 10px;
    z-index: 9999;

    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
    animation: fadeIn 0.3s ease;
}
@keyframes fadeIn {
    from {
        opacity: 0;
        transform: translateX(-50%) translateY(-10px);
    }
    to {
        opacity: 1;
        transform: translateX(-50%) translateY(0);
    }
}

/* login / register*/
.auth-container{
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}
.auth-card{
    background: #fff;
    padding: 30px;
    border-radius: 12px;
    width: 320px;
    box-shadow: 0 8px 20px rgba(0,0,0,0.08);
    text-align: center;
}
.auth-card h1{
    margin-bottom:20px;
    font-size: 22px;
}
.auth-card input{
    width: 100%;
    padding:10px ;
    margin-bottom: 10px;
    border: 1px solid #ddd;
    border-radius: 8px;
    outline: none;
}
.auth-card input:focus{
    border-color:#4caf50;
}
.auth-card button{
    width: 100%;
    padding: 10px;
    border:none;
    border-radius: 8px;
    background-color: #333;
    color: #fff;
    cursor: pointer;
    transition: 0.2s;
}
.auth-card button:hover{
    background: #4caf50;
}


/* write / edit */
.form-container{
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}
.form-card{
    background: #fff;
    padding: 30px;
    border-radius: 12px;
    width: 640px;
    box-shadow: 0 8px 20px rgba(0,0,0,0.08);
    
}
.form-card h1{
 
    font-size: 22px;
    text-align: center;
  
}
.form-card p{
    font-weight: 700;
}
.form-card input{
    width: 100%;
    padding:10px ;
    margin: 10px 5px 25px;
    border: 1px solid #ddd;
    border-radius: 8px;
    outline: none;
}

.form-card button{
    width: 100%;
    padding: 10px;
    border:none;
    border-radius: 8px;
    background-color: #333;
    color: #fff;
    cursor: pointer;
    transition: 0.2s;
}
.form-card button:hover{
    background: #4caf50;
}

.card-header{
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 50px;
}

.result-bar{
    width: 100%;
    background: #eee;
    border-radius: 10px;
    overflow: hidden;
    margin-top: 10px;
}

.fill{
    padding: 10px;
    color: white;
    font-weight: bold;
    transition: width 0.8s ease;

}

.a{
    background: #4caf50;
}

.b{
    background: #ff6b6b;
}

/* comment */
.comment-form {
    display: flex;
    gap: 8px;
    margin-bottom: 15px;
}

.comment-form input {
    flex: 1;
    padding: 8px;
    border: 1px solid #ddd;
    border-radius: 6px;
}

.comment-form button {
    padding: 8px 12px;
    border: none;
    background: #333;
    color: white;
    border-radius: 6px;
    cursor: pointer;
}
.comment-list{
    max-width: 600px;
    margin: 30px auto;
    padding: 0 15px;
}
.comment-box{
      max-width: 600px;
    margin: 30px auto;
    padding: 0 15px;
}
.comment {
    background: #f8f8f8;
    padding: 10px;
    margin-bottom: 8px;
    border-radius: 8px;
}

.comment-user {
    font-weight: bold;
    font-size: 13px;
    margin-bottom: 3px;
}

.comment-text {
    font-size: 14px;
}

.no-comment {
    color: #888;
    font-size: 14px;
}

